languages/statemachine/LanguageParser.py
# Generated from C:/Users/hfadhlil/PycharmProjects/lipvm/languages/statemachine/Language.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LanguageParser ( Parser ):

    grammarFileName = "Language.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'statemachine'", "'events'", "'initialState'", 
                     "'state'", "'end'", "'=>'", "'activate:'", "'tick:'", 
                     "'if'", "'else'", "'mch_driver.'", "','", "'halt'", 
                     "'='", "'for'", "'to'", "'<'", "'<='", "'>'", "'>='", 
                     "'=='", "'!='", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'('", "')'", "'{'", "'}'", "'&&'", "'||'", "'+'", 
                     "'-'", "'*'", "'/'", "'!'", "'True'", "'False'", "'mch_driver'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ID", "NUMBER", 
                      "STRING", "LPAREN", "RPAREN", "LCBRACKET", "RCBRACKET", 
                      "AND", "OR", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", 
                      "NOT", "TRUE", "FALSE", "MCH_DRIVER", "WS" ]

    RULE_machine = 0
    RULE_events = 1
    RULE_initial = 2
    RULE_state = 3
    RULE_transition = 4
    RULE_activate = 5
    RULE_tick = 6
    RULE_conditional = 7
    RULE_variable = 8
    RULE_literal = 9
    RULE_driver_call = 10
    RULE_expression = 11
    RULE_orExpression = 12
    RULE_andExpression = 13
    RULE_relEqExpression = 14
    RULE_additiveExpression = 15
    RULE_multiplicativeExpression = 16
    RULE_unaryExpression = 17
    RULE_primaryExpression = 18
    RULE_arguments = 19
    RULE_call = 20
    RULE_halt = 21
    RULE_body = 22
    RULE_assignment = 23
    RULE_forloop = 24
    RULE_main = 25
    RULE_relEqOp = 26

    ruleNames =  [ "machine", "events", "initial", "state", "transition", 
                   "activate", "tick", "conditional", "variable", "literal", 
                   "driver_call", "expression", "orExpression", "andExpression", 
                   "relEqExpression", "additiveExpression", "multiplicativeExpression", 
                   "unaryExpression", "primaryExpression", "arguments", 
                   "call", "halt", "body", "assignment", "forloop", "main", 
                   "relEqOp" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    ID=23
    NUMBER=24
    STRING=25
    LPAREN=26
    RPAREN=27
    LCBRACKET=28
    RCBRACKET=29
    AND=30
    OR=31
    PLUS=32
    MINUS=33
    MULTIPLY=34
    DIVIDE=35
    NOT=36
    TRUE=37
    FALSE=38
    MCH_DRIVER=39
    WS=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class MachineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token

        def ID(self):
            return self.getToken(LanguageParser.ID, 0)

        def getRuleIndex(self):
            return LanguageParser.RULE_machine

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMachine" ):
                return visitor.visitMachine(self)
            else:
                return visitor.visitChildren(self)




    def machine(self):

        localctx = LanguageParser.MachineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_machine)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(LanguageParser.T__0)
            self.state = 55
            localctx.name = self.match(LanguageParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EventsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(LanguageParser.ID)
            else:
                return self.getToken(LanguageParser.ID, i)

        def getRuleIndex(self):
            return LanguageParser.RULE_events

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEvents" ):
                return visitor.visitEvents(self)
            else:
                return visitor.visitChildren(self)




    def events(self):

        localctx = LanguageParser.EventsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_events)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(LanguageParser.T__1)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==23:
                self.state = 58
                localctx.name = self.match(LanguageParser.ID)
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitialContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token

        def ID(self):
            return self.getToken(LanguageParser.ID, 0)

        def getRuleIndex(self):
            return LanguageParser.RULE_initial

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInitial" ):
                return visitor.visitInitial(self)
            else:
                return visitor.visitChildren(self)




    def initial(self):

        localctx = LanguageParser.InitialContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_initial)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(LanguageParser.T__2)
            self.state = 65
            localctx.name = self.match(LanguageParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self.transitions = None # TransitionContext
            self.activate_func = None # ActivateContext
            self.tick_func = None # TickContext

        def ID(self):
            return self.getToken(LanguageParser.ID, 0)

        def transition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.TransitionContext)
            else:
                return self.getTypedRuleContext(LanguageParser.TransitionContext,i)


        def activate(self):
            return self.getTypedRuleContext(LanguageParser.ActivateContext,0)


        def tick(self):
            return self.getTypedRuleContext(LanguageParser.TickContext,0)


        def getRuleIndex(self):
            return LanguageParser.RULE_state

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitState" ):
                return visitor.visitState(self)
            else:
                return visitor.visitChildren(self)




    def state_(self):

        localctx = LanguageParser.StateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_state)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(LanguageParser.T__3)
            self.state = 68
            localctx.name = self.match(LanguageParser.ID)
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==23:
                self.state = 69
                localctx.transitions = self.transition()
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 75
                localctx.activate_func = self.activate()


            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 78
                localctx.tick_func = self.tick()


            self.state = 81
            self.match(LanguageParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TransitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self.stateName = None # Token
            self.targetCall = None # CallContext

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(LanguageParser.ID)
            else:
                return self.getToken(LanguageParser.ID, i)

        def call(self):
            return self.getTypedRuleContext(LanguageParser.CallContext,0)


        def getRuleIndex(self):
            return LanguageParser.RULE_transition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTransition" ):
                return visitor.visitTransition(self)
            else:
                return visitor.visitChildren(self)




    def transition(self):

        localctx = LanguageParser.TransitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_transition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            localctx.name = self.match(LanguageParser.ID)
            self.state = 84
            self.match(LanguageParser.T__5)
            self.state = 87
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 85
                localctx.stateName = self.match(LanguageParser.ID)
                pass

            elif la_ == 2:
                self.state = 86
                localctx.targetCall = self.call()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActivateContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body(self):
            return self.getTypedRuleContext(LanguageParser.BodyContext,0)


        def getRuleIndex(self):
            return LanguageParser.RULE_activate

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitActivate" ):
                return visitor.visitActivate(self)
            else:
                return visitor.visitChildren(self)




    def activate(self):

        localctx = LanguageParser.ActivateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_activate)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(LanguageParser.T__6)
            self.state = 90
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TickContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body(self):
            return self.getTypedRuleContext(LanguageParser.BodyContext,0)


        def getRuleIndex(self):
            return LanguageParser.RULE_tick

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTick" ):
                return visitor.visitTick(self)
            else:
                return visitor.visitChildren(self)




    def tick(self):

        localctx = LanguageParser.TickContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_tick)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(LanguageParser.T__7)
            self.state = 93
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.condition = None # ExpressionContext
            self.then_body = None # BodyContext
            self.else_body = None # BodyContext

        def LPAREN(self):
            return self.getToken(LanguageParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(LanguageParser.RPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(LanguageParser.ExpressionContext,0)


        def body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.BodyContext)
            else:
                return self.getTypedRuleContext(LanguageParser.BodyContext,i)


        def getRuleIndex(self):
            return LanguageParser.RULE_conditional

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditional" ):
                return visitor.visitConditional(self)
            else:
                return visitor.visitChildren(self)




    def conditional(self):

        localctx = LanguageParser.ConditionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_conditional)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(LanguageParser.T__8)
            self.state = 96
            self.match(LanguageParser.LPAREN)
            self.state = 97
            localctx.condition = self.expression()
            self.state = 98
            self.match(LanguageParser.RPAREN)
            self.state = 99
            localctx.then_body = self.body()
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 100
                self.match(LanguageParser.T__9)
                self.state = 101
                localctx.else_body = self.body()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.variableName = None # Token

        def ID(self):
            return self.getToken(LanguageParser.ID, 0)

        def getRuleIndex(self):
            return LanguageParser.RULE_variable

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable" ):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)




    def variable(self):

        localctx = LanguageParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_variable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            localctx.variableName = self.match(LanguageParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(LanguageParser.VariableContext,0)


        def NUMBER(self):
            return self.getToken(LanguageParser.NUMBER, 0)

        def STRING(self):
            return self.getToken(LanguageParser.STRING, 0)

        def TRUE(self):
            return self.getToken(LanguageParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(LanguageParser.FALSE, 0)

        def getRuleIndex(self):
            return LanguageParser.RULE_literal

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteral" ):
                return visitor.visitLiteral(self)
            else:
                return visitor.visitChildren(self)




    def literal(self):

        localctx = LanguageParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_literal)
        try:
            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [23]:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.variable()
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.match(LanguageParser.NUMBER)
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 3)
                self.state = 108
                self.match(LanguageParser.STRING)
                pass
            elif token in [37]:
                self.enterOuterAlt(localctx, 4)
                self.state = 109
                self.match(LanguageParser.TRUE)
                pass
            elif token in [38]:
                self.enterOuterAlt(localctx, 5)
                self.state = 110
                self.match(LanguageParser.FALSE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Driver_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.driverCall = None # CallContext

        def call(self):
            return self.getTypedRuleContext(LanguageParser.CallContext,0)


        def getRuleIndex(self):
            return LanguageParser.RULE_driver_call

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDriver_call" ):
                return visitor.visitDriver_call(self)
            else:
                return visitor.visitChildren(self)




    def driver_call(self):

        localctx = LanguageParser.Driver_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_driver_call)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(LanguageParser.T__10)
            self.state = 114
            localctx.driverCall = self.call()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.operand = None # OrExpressionContext

        def orExpression(self):
            return self.getTypedRuleContext(LanguageParser.OrExpressionContext,0)


        def getRuleIndex(self):
            return LanguageParser.RULE_expression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = LanguageParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            localctx.operand = self.orExpression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OrExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._andExpression = None # AndExpressionContext
            self.operands = list() # of AndExpressionContexts
            self._OR = None # Token
            self.operators = list() # of Tokens

        def andExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.AndExpressionContext)
            else:
                return self.getTypedRuleContext(LanguageParser.AndExpressionContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(LanguageParser.OR)
            else:
                return self.getToken(LanguageParser.OR, i)

        def getRuleIndex(self):
            return LanguageParser.RULE_orExpression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOrExpression" ):
                return visitor.visitOrExpression(self)
            else:
                return visitor.visitChildren(self)




    def orExpression(self):

        localctx = LanguageParser.OrExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_orExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            localctx._andExpression = self.andExpression()
            localctx.operands.append(localctx._andExpression)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==31:
                self.state = 119
                localctx._OR = self.match(LanguageParser.OR)
                localctx.operators.append(localctx._OR)
                self.state = 120
                localctx._andExpression = self.andExpression()
                localctx.operands.append(localctx._andExpression)
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AndExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._relEqExpression = None # RelEqExpressionContext
            self.operands = list() # of RelEqExpressionContexts
            self._AND = None # Token
            self.operators = list() # of Tokens

        def relEqExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.RelEqExpressionContext)
            else:
                return self.getTypedRuleContext(LanguageParser.RelEqExpressionContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(LanguageParser.AND)
            else:
                return self.getToken(LanguageParser.AND, i)

        def getRuleIndex(self):
            return LanguageParser.RULE_andExpression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAndExpression" ):
                return visitor.visitAndExpression(self)
            else:
                return visitor.visitChildren(self)




    def andExpression(self):

        localctx = LanguageParser.AndExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_andExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            localctx._relEqExpression = self.relEqExpression()
            localctx.operands.append(localctx._relEqExpression)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==30:
                self.state = 127
                localctx._AND = self.match(LanguageParser.AND)
                localctx.operators.append(localctx._AND)
                self.state = 128
                localctx._relEqExpression = self.relEqExpression()
                localctx.operands.append(localctx._relEqExpression)
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelEqExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._additiveExpression = None # AdditiveExpressionContext
            self.operands = list() # of AdditiveExpressionContexts
            self._relEqOp = None # RelEqOpContext
            self.operators = list() # of RelEqOpContexts

        def additiveExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.AdditiveExpressionContext)
            else:
                return self.getTypedRuleContext(LanguageParser.AdditiveExpressionContext,i)


        def relEqOp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.RelEqOpContext)
            else:
                return self.getTypedRuleContext(LanguageParser.RelEqOpContext,i)


        def getRuleIndex(self):
            return LanguageParser.RULE_relEqExpression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelEqExpression" ):
                return visitor.visitRelEqExpression(self)
            else:
                return visitor.visitChildren(self)




    def relEqExpression(self):

        localctx = LanguageParser.RelEqExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_relEqExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            localctx._additiveExpression = self.additiveExpression()
            localctx.operands.append(localctx._additiveExpression)
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8257536) != 0):
                self.state = 135
                localctx._relEqOp = self.relEqOp()
                localctx.operators.append(localctx._relEqOp)
                self.state = 136
                localctx._additiveExpression = self.additiveExpression()
                localctx.operands.append(localctx._additiveExpression)
                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AdditiveExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._multiplicativeExpression = None # MultiplicativeExpressionContext
            self.operands = list() # of MultiplicativeExpressionContexts
            self._PLUS = None # Token
            self.operators = list() # of Tokens
            self._MINUS = None # Token
            self._tset249 = None # Token

        def multiplicativeExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.MultiplicativeExpressionContext)
            else:
                return self.getTypedRuleContext(LanguageParser.MultiplicativeExpressionContext,i)


        def PLUS(self, i:int=None):
            if i is None:
                return self.getTokens(LanguageParser.PLUS)
            else:
                return self.getToken(LanguageParser.PLUS, i)

        def MINUS(self, i:int=None):
            if i is None:
                return self.getTokens(LanguageParser.MINUS)
            else:
                return self.getToken(LanguageParser.MINUS, i)

        def getRuleIndex(self):
            return LanguageParser.RULE_additiveExpression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAdditiveExpression" ):
                return visitor.visitAdditiveExpression(self)
            else:
                return visitor.visitChildren(self)




    def additiveExpression(self):

        localctx = LanguageParser.AdditiveExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_additiveExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            localctx._multiplicativeExpression = self.multiplicativeExpression()
            localctx.operands.append(localctx._multiplicativeExpression)
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==32 or _la==33:
                self.state = 144
                localctx._tset249 = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==32 or _la==33):
                    localctx._tset249 = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                localctx.operators.append(localctx._tset249)
                self.state = 145
                localctx._multiplicativeExpression = self.multiplicativeExpression()
                localctx.operands.append(localctx._multiplicativeExpression)
                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MultiplicativeExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._unaryExpression = None # UnaryExpressionContext
            self.operands = list() # of UnaryExpressionContexts
            self._MULTIPLY = None # Token
            self.operators = list() # of Tokens
            self._DIVIDE = None # Token
            self._tset274 = None # Token

        def unaryExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LanguageParser.UnaryExpressionContext)
            else:
                return self.getTypedRuleContext(LanguageParser.UnaryExpressionContext,i)


        def MULTIPLY(self, i:int=None):
            if i is None:
                return self.getTokens(LanguageParser.MULTIPLY)
            else:
                return self.getToken(LanguageParser.MULTIPLY, i)

        def DIVIDE(self, i:int=None):
            if i is None:
                return self.getTokens(LanguageParser.DIVIDE)
            else:
                return self.getToken(LanguageParser.DIVIDE, i)

        def getRuleIndex(self):
            return LanguageParser.RULE_multiplicativeExpression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultiplicativeExpression" ):
                return visitor.visitMultiplicativeExpression(self)
            else:
                return visitor.visitChildren(self)




    def multiplicativeExpression(self):

        localctx = LanguageParser.MultiplicativeExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_multiplicativeExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            localctx._unaryExpression = self.unaryExpression()
            localctx.operands.append(localctx._unaryExpression)
            self.state = 156
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==34 or _la==35:
                self.state = 152
                localctx._tset274 = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==34 or _la==35):
                    localctx._tset274 = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                localctx.operators.append(localctx._tset274)
                self.state = 153
                localctx._unaryExpression = self.unaryExpression()
                localctx.operands.append(localctx._unaryExpression)
                self.state = 158
                self._errHandler.sync(self)
                _la = self._input.LA(1)
